# ATQC

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean_cmake.sh  clifford_tableau  compile_presentation.sh  generate_random_circuits  main.cpp  measurement.json  test_clifford_tableaus
Presentation/: CliffordTableausPresentation.tex  bibliography.bib  compilation_log.txt  frameset02_GroupTheory.tex  frameset05_StabilizerGroups.tex  frameset06_StabilizerConditions.tex  frameset10_GottesmanKnillTheorem.tex  frameset11_StabilizerCircuit.tex  frameset12_CliffordTableau.tex  frameset13_HadamardGateAlgorithm.tex  frameset14_PhaseGateAlgorithm.tex  frameset15_MeasurementAlgorithm.tex  frameset16_Advantages.tex  frameset1_PauliMatrices.tex  frameset3_PauliGroup.tex  frameset4_GroupGenerators.tex  frameset7_CheckMatrix.tex  frameset8_UnitaryOperations.tex  frameset9_Measurement.tex  tumuser.sty
Presentation/tum/: tumbeamer.cls
src/: stabilizer_circuit.cpp  stabilizer_circuit.h  stabilizer_tableau.cpp  stabilizer_tableau.h
src/improved_simulation_of_stabilizer_circuits/: improved_stabilizer_tableau.cpp  improved_stabilizer_tableau.h  subroutines.cpp  subroutines.h
src/stabilizer_circuits/: bernstein_16.qasm  random_circuit_1.qasm  random_circuit_2.qasm  random_circuit_3.qasm  random_circuit_4.qasm  random_circuit_5.qasm  random_circuit_6.qasm  random_circuit_7.qasm  random_circuit_8.qasm  random_circuit_9.qasm  test_circuit_1.qasm  test_circuit_10.qasm  test_circuit_11.qasm  test_circuit_2.qasm  test_circuit_3.qasm  test_circuit_4.qasm  test_circuit_5.qasm  test_circuit_6.qasm  test_circuit_7.qasm  test_circuit_8.qasm  (+1 more)
tests/: generate_random_circuits.cpp  test_improved_stabilizer_tableau.cpp
